Fri Jun 18 23:08:18 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Makefile.in (distclean-ext): removes directories for extensions
	  correctly.

	* common.mk (realclean-local): removes id.h too.

Fri Jun 18 01:33:21 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* enc/Makefile.in (realclean): has been missing. necessary
	  for make realclean-enc.

Fri Jun 18 01:12:33 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* configure.in (RMDIRS): reverts r27011 because it causes bothersome
	  messages on make clean.

Thu Jun 17 18:55:01 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_str_encode_ospath): when the encoding of the parameter
	  is ASCII-8BIT, should recognize as filesystem encoding, and convert
	  to UTF-8 on Windows.

	* file.c (realpath_rec): should convert to ospath encoding before
	  calling lstat().

	* file.c (rb_realpath_internal): resolved string should take over
	  the encoding of base string.

	* transcode.c (rb_str_encode): should return new string always.
	  fixed #3444.

Thu Jun 17 18:22:00 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/digest/sha2/lib/sha2.rb: revert r28347.  It's my mistake.

Thu Jun 17 17:32:00 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/digest/sha2/lib/sha2.rb: Darwin uses ".bundle", but not ".so",
	  for the filename extension part of native libraries.

Thu Jun 17 17:30:00 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/digest/sha2/extconf.rb: remove a check for uint64_t.

Wed Jun 16 18:35:20 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest: Work around a build problem with VC++ 2010, likely
	  due to a bug of its cl.exe. [Bug #3231]

Wed Jun 16 15:44:59 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* error.c (rb_bug): existance of _set_abort_behavior() depends on
	  runtime version, not compiler version.

Mon Jun 14 22:36:09 2010  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_socket.rb (test_udp_server): rescue Errno::ENOSYS 
	  for Windows.

	* test/socket/test_nonblock.rb (test_sendmsg_nonblock_error): ditto.
